src/snapshots/redmine_tui_draft__test_support__issue_select_popup_failed.snap
---
source: src/test_support.rs
expression: describe_buffer(terminal.backend().buffer())
---
area=Rect { x: 0, y: 0, width: 80, height: 24 }
00: "                                                                                "
01: "                                                                                "
02: "        ┌──────────────────────────────────────────────────────────────┐        " | 8:"┌" fg=Rgb(74, 83, 102) bg=Reset mod=NONE, 9:"─" fg=Rgb(74, 83, 102) bg=Reset mod=NONE, 10:"─" fg=Rgb(74, 83, 102) bg=Reset mod=NONE, 11:"─" fg=Rgb(74, 83, 102) bg=Reset mod=NONE, 12:"─" fg=Rgb(74, 83, 102) bg=Reset mod=NONE, 13:"─" fg=Rgb(74, 83, 102) bg=Reset mod=NONE, 14:"─" fg=Rgb(74, 83, 102) bg=Reset mod=NONE, 15:"─" fg=Rgb(74, 83, 102) bg=Reset mod=NONE, 16:"─" fg=Rgb(74, 83, 102) bg=Reset mod=NONE, 17:"─" fg=Rgb(74, 83, 102) bg=Reset mod=NONE, 18:"─" fg=Rgb(74, 83, 102) bg=Reset mod=NONE, 19:"─" fg=Rgb(74, 83, 102) bg=Reset mod=NONE, 20:"─" fg=Rgb(74, 83, 102) bg=Reset mod=NONE, 21:"─" fg=Rgb(74, 83, 102) bg=Reset mod=NONE, 22:"─" fg=Rgb(74, 83, 102) bg=Reset mod=NONE, 23:"─" fg=Rgb(74, 83, 102) bg=Reset mod=NONE, 24:"─" fg=Rgb(74, 83, 102) bg=Reset mod=NONE, 25:"─" fg=Rgb(74, 83, 102) bg=Reset mod=NONE, 26:"─" fg=Rgb(74, 83, 102) bg=Reset mod=NONE, 27:"─" fg=Rgb(74, 83, 102) bg=Reset mod=NONE, 28:"─" fg=Rgb(74, 83, 102) bg=Reset mod=NONE, 29:"─" fg=Rgb(74, 83, 102) bg=Reset mod=NONE, 30:"─" fg=Rgb(74, 83, 102) bg=Reset mod=NONE, 31:"─" fg=Rgb(74, 83, 102) bg=Reset mod=NONE, 32:"─" fg=Rgb(74, 83, 102) bg=Reset mod=NONE, 33:"─" fg=Rgb(74, 83, 102) bg=Reset mod=NONE, 34:"─" fg=Rgb(74, 83, 102) bg=Reset mod=NONE, 35:"─" fg=Rgb(74, 83, 102) bg=Reset mod=NONE, 36:"─" fg=Rgb(74, 83, 102) bg=Reset mod=NONE, 37:"─" fg=Rgb(74, 83, 102) bg=Reset mod=NONE, 38:"─" fg=Rgb(74, 83, 102) bg=Reset mod=NONE, 39:"─" fg=Rgb(74, 83, 102) bg=Reset mod=NONE, 40:"─" fg=Rgb(74, 83, 102) bg=Reset mod=NONE, 41:"─" fg=Rgb(74, 83, 102) bg=Reset mod=NONE, 42:"─" fg=Rgb(74, 83, 102) bg=Reset mod=NONE, 43:"─" fg=Rgb(74, 83, 102) bg=Reset mod=NONE, 44:"─" fg=Rgb(74, 83, 102) bg=Reset mod=NONE, 45:"─" fg=Rgb(74, 83, 102) bg=Reset mod=NONE, 46:"─" fg=Rgb(74, 83, 102) bg=Reset mod=NONE, 47:"─" fg=Rgb(74, 83, 102) bg=Reset mod=NONE, 48:"─" fg=Rgb(74, 83, 102) bg=Reset mod=NONE, 49:"─" fg=Rgb(74, 83, 102) bg=Reset mod=NONE, 50:"─" fg=Rgb(74, 83, 102) bg=Reset mod=NONE, 51:"─" fg=Rgb(74, 83, 102) bg=Reset mod=NONE, 52:"─" fg=Rgb(74, 83, 102) bg=Reset mod=NONE, 53:"─" fg=Rgb(74, 83, 102) bg=Reset mod=NONE, 54:"─" fg=Rgb(74, 83, 102) bg=Reset mod=NONE, 55:"─" fg=Rgb(74, 83, 102) bg=Reset mod=NONE, 56:"─" fg=Rgb(74, 83, 102) bg=Reset mod=NONE, 57:"─" fg=Rgb(74, 83, 102) bg=Reset mod=NONE, 58:"─" fg=Rgb(74, 83, 102) bg=Reset mod=NONE, 59:"─" fg=Rgb(74, 83, 102) bg=Reset mod=NONE, 60:"─" fg=Rgb(74, 83, 102) bg=Reset mod=NONE, 61:"─" fg=Rgb(74, 83, 102) bg=Reset mod=NONE, 62:"─" fg=Rgb(74, 83, 102) bg=Reset mod=NONE, 63:"─" fg=Rgb(74, 83, 102) bg=Reset mod=NONE, 64:"─" fg=Rgb(74, 83, 102) bg=Reset mod=NONE, 65:"─" fg=Rgb(74, 83, 102) bg=Reset mod=NONE, 66:"─" fg=Rgb(74, 83, 102) bg=Reset mod=NONE, 67:"─" fg=Rgb(74, 83, 102) bg=Reset mod=NONE, 68:"─" fg=Rgb(74, 83, 102) bg=Reset mod=NONE, 69:"─" fg=Rgb(74, 83, 102) bg=Reset mod=NONE, 70:"─" fg=Rgb(74, 83, 102) bg=Reset mod=NONE, 71:"┐" fg=Rgb(74, 83, 102) bg=Reset mod=NONE
03: "        │▌ PROJECTS      ▌ ISSUES                ▌ PREVIEW             │        " | 8:"│" fg=Rgb(74, 83, 102) bg=Reset mod=NONE, 9:"▌" fg=Rgb(122, 162, 247) bg=Reset mod=BOLD, 10:" " fg=Rgb(122, 162, 247) bg=Reset mod=BOLD, 11:"P" fg=Rgb(122, 162, 247) bg=Reset mod=BOLD, 12:"R" fg=Rgb(122, 162, 247) bg=Reset mod=BOLD, 13:"O" fg=Rgb(122, 162, 247) bg=Reset mod=BOLD, 14:"J" fg=Rgb(122, 162, 247) bg=Reset mod=BOLD, 15:"E" fg=Rgb(122, 162, 247) bg=Reset mod=BOLD, 16:"C" fg=Rgb(122, 162, 247) bg=Reset mod=BOLD, 17:"T" fg=Rgb(122, 162, 247) bg=Reset mod=BOLD, 18:"S" fg=Rgb(122, 162, 247) bg=Reset mod=BOLD, 19:" " fg=Rgb(122, 162, 247) bg=Reset mod=BOLD, 20:" " fg=Rgb(122, 162, 247) bg=Reset mod=BOLD, 21:" " fg=Rgb(122, 162, 247) bg=Reset mod=BOLD, 22:" " fg=Rgb(122, 162, 247) bg=Reset mod=BOLD, 23:" " fg=Rgb(122, 162, 247) bg=Reset mod=BOLD, 25:"▌" fg=Rgb(122, 162, 247) bg=Reset mod=BOLD, 26:" " fg=Rgb(122, 162, 247) bg=Reset mod=BOLD, 27:"I" fg=Rgb(122, 162, 247) bg=Reset mod=BOLD, 28:"S" fg=Rgb(122, 162, 247) bg=Reset mod=BOLD, 29:"S" fg=Rgb(122, 162, 247) bg=Reset mod=BOLD, 30:"U" fg=Rgb(122, 162, 247) bg=Reset mod=BOLD, 31:"E" fg=Rgb(122, 162, 247) bg=Reset mod=BOLD, 32:"S" fg=Rgb(122, 162, 247) bg=Reset mod=BOLD, 33:" " fg=Rgb(122, 162, 247) bg=Reset mod=BOLD, 34:" " fg=Rgb(122, 162, 247) bg=Reset mod=BOLD, 35:" " fg=Rgb(122, 162, 247) bg=Reset mod=BOLD, 36:" " fg=Rgb(122, 162, 247) bg=Reset mod=BOLD, 37:" " fg=Rgb(122, 162, 247) bg=Reset mod=BOLD, 38:" " fg=Rgb(122, 162, 247) bg=Reset mod=BOLD, 39:" " fg=Rgb(122, 162, 247) bg=Reset mod=BOLD, 40:" " fg=Rgb(122, 162, 247) bg=Reset mod=BOLD, 41:" " fg=Rgb(122, 162, 247) bg=Reset mod=BOLD, 42:" " fg=Rgb(122, 162, 247) bg=Reset mod=BOLD, 43:" " fg=Rgb(122, 162, 247) bg=Reset mod=BOLD, 44:" " fg=Rgb(122, 162, 247) bg=Reset mod=BOLD, 45:" " fg=Rgb(122, 162, 247) bg=Reset mod=BOLD, 46:" " fg=Rgb(122, 162, 247) bg=Reset mod=BOLD, 47:" " fg=Rgb(122, 162, 247) bg=Reset mod=BOLD, 49:"▌" fg=Rgb(122, 162, 247) bg=Reset mod=BOLD, 50:" " fg=Rgb(122, 162, 247) bg=Reset mod=BOLD, 51:"P" fg=Rgb(122, 162, 247) bg=Reset mod=BOLD, 52:"R" fg=Rgb(122, 162, 247) bg=Reset mod=BOLD, 53:"E" fg=Rgb(122, 162, 247) bg=Reset mod=BOLD, 54:"V" fg=Rgb(122, 162, 247) bg=Reset mod=BOLD, 55:"I" fg=Rgb(122, 162, 247) bg=Reset mod=BOLD, 56:"E" fg=Rgb(122, 162, 247) bg=Reset mod=BOLD, 57:"W" fg=Rgb(122, 162, 247) bg=Reset mod=BOLD, 58:" " fg=Rgb(122, 162, 247) bg=Reset mod=BOLD, 59:" " fg=Rgb(122, 162, 247) bg=Reset mod=BOLD, 60:" " fg=Rgb(122, 162, 247) bg=Reset mod=BOLD, 61:" " fg=Rgb(122, 162, 247) bg=Reset mod=BOLD, 62:" " fg=Rgb(122, 162, 247) bg=Reset mod=BOLD, 63:" " fg=Rgb(122, 162, 247) bg=Reset mod=BOLD, 64:" " fg=Rgb(122, 162, 247) bg=Reset mod=BOLD, 65:" " fg=Rgb(122, 162, 247) bg=Reset mod=BOLD, 66:" " fg=Rgb(122, 162, 247) bg=Reset mod=BOLD, 67:" " fg=Rgb(122, 162, 247) bg=Reset mod=BOLD, 68:" " fg=Rgb(122, 162, 247) bg=Reset mod=BOLD, 69:" " fg=Rgb(122, 162, 247) bg=Reset mod=BOLD, 70:" " fg=Rgb(122, 162, 247) bg=Reset mod=BOLD, 71:"│" fg=Rgb(74, 83, 102) bg=Reset mod=NONE
04: "        │redmine-tui    │offline                │                      │        " | 8:"│" fg=Rgb(74, 83, 102) bg=Reset mod=NONE, 9:"r" fg=Reset bg=Rgb(42, 47, 65) mod=NONE, 10:"e" fg=Reset bg=Rgb(42, 47, 65) mod=NONE, 11:"d" fg=Reset bg=Rgb(42, 47, 65) mod=NONE, 12:"m" fg=Reset bg=Rgb(42, 47, 65) mod=NONE, 13:"i" fg=Reset bg=Rgb(42, 47, 65) mod=NONE, 14:"n" fg=Reset bg=Rgb(42, 47, 65) mod=NONE, 15:"e" fg=Reset bg=Rgb(42, 47, 65) mod=NONE, 16:"-" fg=Reset bg=Rgb(42, 47, 65) mod=NONE, 17:"t" fg=Reset bg=Rgb(42, 47, 65) mod=NONE, 18:"u" fg=Reset bg=Rgb(42, 47, 65) mod=NONE, 19:"i" fg=Reset bg=Rgb(42, 47, 65) mod=NONE, 20:" " fg=Reset bg=Rgb(42, 47, 65) mod=NONE, 21:" " fg=Reset bg=Rgb(42, 47, 65) mod=NONE, 22:" " fg=Reset bg=Rgb(42, 47, 65) mod=NONE, 23:" " fg=Reset bg=Rgb(42, 47, 65) mod=NONE, 24:"│" fg=Rgb(42, 47, 65) bg=Reset mod=NONE, 25:"o" fg=Reset bg=Reset mod=NONE, 26:"f" fg=Reset bg=Reset mod=NONE, 27:"f" fg=Reset bg=Reset mod=NONE, 28:"l" fg=Reset bg=Reset mod=NONE, 29:"i" fg=Reset bg=Reset mod=NONE, 30:"n" fg=Reset bg=Reset mod=NONE, 31:"e" fg=Reset bg=Reset mod=NONE, 48:"│" fg=Rgb(42, 47, 65) bg=Reset mod=NONE, 71:"│" fg=Rgb(74, 83, 102) bg=Reset mod=NONE
05: "        │backend        │r で 再 試 行              │                      │        " | 8:"│" fg=Rgb(74, 83, 102) bg=Reset mod=NONE, 9:"b" fg=Reset bg=Reset mod=NONE, 10:"a" fg=Reset bg=Reset mod=NONE, 11:"c" fg=Reset bg=Reset mod=NONE, 12:"k" fg=Reset bg=Reset mod=NONE, 13:"e" fg=Reset bg=Reset mod=NONE, 14:"n" fg=Reset bg=Reset mod=NONE, 15:"d" fg=Reset bg=Reset mod=NONE, 24:"│" fg=Rgb(42, 47, 65) bg=Reset mod=NONE, 25:"r" fg=Reset bg=Reset mod=NONE, 27:"で" fg=Reset bg=Reset mod=NONE, 29:"再" fg=Reset bg=Reset mod=NONE, 31:"試" fg=Reset bg=Reset mod=NONE, 33:"行" fg=Reset bg=Reset mod=NONE, 48:"│" fg=Rgb(42, 47, 65) bg=Reset mod=NONE, 71:"│" fg=Rgb(74, 83, 102) bg=Reset mod=NONE
06: "        │docs           │                       │                      │        " | 8:"│" fg=Rgb(74, 83, 102) bg=Reset mod=NONE, 9:"d" fg=Reset bg=Reset mod=NONE, 10:"o" fg=Reset bg=Reset mod=NONE, 11:"c" fg=Reset bg=Reset mod=NONE, 12:"s" fg=Reset bg=Reset mod=NONE, 24:"│" fg=Rgb(42, 47, 65) bg=Reset mod=NONE, 48:"│" fg=Rgb(42, 47, 65) bg=Reset mod=NONE, 71:"│" fg=Rgb(74, 83, 102) bg=Reset mod=NONE
07: "        │               │                       │                      │        " | 8:"│" fg=Rgb(74, 83, 102) bg=Reset mod=NONE, 24:"│" fg=Rgb(42, 47, 65) bg=Reset mod=NONE, 48:"│" fg=Rgb(42, 47, 65) bg=Reset mod=NONE, 71:"│" fg=Rgb(74, 83, 102) bg=Reset mod=NONE
08: "        │               │                       │                      │        " | 8:"│" fg=Rgb(74, 83, 102) bg=Reset mod=NONE, 24:"│" fg=Rgb(42, 47, 65) bg=Reset mod=NONE, 48:"│" fg=Rgb(42, 47, 65) bg=Reset mod=NONE, 71:"│" fg=Rgb(74, 83, 102) bg=Reset mod=NONE
09: "        │               │                       │                      │        " | 8:"│" fg=Rgb(74, 83, 102) bg=Reset mod=NONE, 24:"│" fg=Rgb(42, 47, 65) bg=Reset mod=NONE, 48:"│" fg=Rgb(42, 47, 65) bg=Reset mod=NONE, 71:"│" fg=Rgb(74, 83, 102) bg=Reset mod=NONE
10: "        │               │                       │                      │        " | 8:"│" fg=Rgb(74, 83, 102) bg=Reset mod=NONE, 24:"│" fg=Rgb(42, 47, 65) bg=Reset mod=NONE, 48:"│" fg=Rgb(42, 47, 65) bg=Reset mod=NONE, 71:"│" fg=Rgb(74, 83, 102) bg=Reset mod=NONE
11: "        │               │                       │                      │        " | 8:"│" fg=Rgb(74, 83, 102) bg=Reset mod=NONE, 24:"│" fg=Rgb(42, 47, 65) bg=Reset mod=NONE, 48:"│" fg=Rgb(42, 47, 65) bg=Reset mod=NONE, 71:"│" fg=Rgb(74, 83, 102) bg=Reset mod=NONE
12: "        │               │                       │                      │        " | 8:"│" fg=Rgb(74, 83, 102) bg=Reset mod=NONE, 24:"│" fg=Rgb(42, 47, 65) bg=Reset mod=NONE, 48:"│" fg=Rgb(42, 47, 65) bg=Reset mod=NONE, 71:"│" fg=Rgb(74, 83, 102) bg=Reset mod=NONE
13: "        │               │                       │                      │        " | 8:"│" fg=Rgb(74, 83, 102) bg=Reset mod=NONE, 24:"│" fg=Rgb(42, 47, 65) bg=Reset mod=NONE, 48:"│" fg=Rgb(42, 47, 65) bg=Reset mod=NONE, 71:"│" fg=Rgb(74, 83, 102) bg=Reset mod=NONE
14: "        │               │                       │                      │        " | 8:"│" fg=Rgb(74, 83, 102) bg=Reset mod=NONE, 24:"│" fg=Rgb(42, 47, 65) bg=Reset mod=NONE, 48:"│" fg=Rgb(42, 47, 65) bg=Reset mod=NONE, 71:"│" fg=Rgb(74, 83, 102) bg=Reset mod=NONE
15: "        │               │                       │                      │        " | 8:"│" fg=Rgb(74, 83, 102) bg=Reset mod=NONE, 24:"│" fg=Rgb(42, 47, 65) bg=Reset mod=NONE, 48:"│" fg=Rgb(42, 47, 65) bg=Reset mod=NONE, 71:"│" fg=Rgb(74, 83, 102) bg=Reset mod=NONE
16: "        │               │                       │                      │        " | 8:"│" fg=Rgb(74, 83, 102) bg=Reset mod=NONE, 24:"│" fg=Rgb(42, 47, 65) bg=Reset mod=NONE, 48:"│" fg=Rgb(42, 47, 65) bg=Reset mod=NONE, 71:"│" fg=Rgb(74, 83, 102) bg=Reset mod=NONE
17: "        │               │                       │                      │        " | 8:"│" fg=Rgb(74, 83, 102) bg=Reset mod=NONE, 24:"│" fg=Rgb(42, 47, 65) bg=Reset mod=NONE, 48:"│" fg=Rgb(42, 47, 65) bg=Reset mod=NONE, 71:"│" fg=Rgb(74, 83, 102) bg=Reset mod=NONE
18: "        │               │                       │                      │        " | 8:"│" fg=Rgb(74, 83, 102) bg=Reset mod=NONE, 24:"│" fg=Rgb(42, 47, 65) bg=Reset mod=NONE, 48:"│" fg=Rgb(42, 47, 65) bg=Reset mod=NONE, 71:"│" fg=Rgb(74, 83, 102) bg=Reset mod=NONE
19: "        │  h/l 切 替    j/k 移 動    Enter 開 く    q 閉 じ る                  │        " | 8:"│" fg=Rgb(74, 83, 102) bg=Reset mod=NONE, 9:" " fg=Rgb(128, 138, 158) bg=Reset mod=NONE, 10:" " fg=Rgb(128, 138, 158) bg=Reset mod=NONE, 11:"h" fg=Rgb(128, 138, 158) bg=Reset mod=NONE, 12:"/" fg=Rgb(128, 138, 158) bg=Reset mod=NONE, 13:"l" fg=Rgb(128, 138, 158) bg=Reset mod=NONE, 14:" " fg=Rgb(128, 138, 158) bg=Reset mod=NONE, 15:"切" fg=Rgb(128, 138, 158) bg=Reset mod=NONE, 17:"替" fg=Rgb(128, 138, 158) bg=Reset mod=NONE, 19:" " fg=Rgb(128, 138, 158) bg=Reset mod=NONE, 20:" " fg=Rgb(128, 138, 158) bg=Reset mod=NONE, 21:" " fg=Rgb(128, 138, 158) bg=Reset mod=NONE, 22:"j" fg=Rgb(128, 138, 158) bg=Reset mod=NONE, 23:"/" fg=Rgb(128, 138, 158) bg=Reset mod=NONE, 24:"k" fg=Rgb(128, 138, 158) bg=Reset mod=NONE, 25:" " fg=Rgb(128, 138, 158) bg=Reset mod=NONE, 26:"移" fg=Rgb(128, 138, 158) bg=Reset mod=NONE, 28:"動" fg=Rgb(128, 138, 158) bg=Reset mod=NONE, 30:" " fg=Rgb(128, 138, 158) bg=Reset mod=NONE, 31:" " fg=Rgb(128, 138, 158) bg=Reset mod=NONE, 32:" " fg=Rgb(128, 138, 158) bg=Reset mod=NONE, 33:"E" fg=Rgb(128, 138, 158) bg=Reset mod=NONE, 34:"n" fg=Rgb(128, 138, 158) bg=Reset mod=NONE, 35:"t" fg=Rgb(128, 138, 158) bg=Reset mod=NONE, 36:"e" fg=Rgb(128, 138, 158) bg=Reset mod=NONE, 37:"r" fg=Rgb(128, 138, 158) bg=Reset mod=NONE, 38:" " fg=Rgb(128, 138, 158) bg=Reset mod=NONE, 39:"開" fg=Rgb(128, 138, 158) bg=Reset mod=NONE, 41:"く" fg=Rgb(128, 138, 158) bg=Reset mod=NONE, 43:" " fg=Rgb(128, 138, 158) bg=Reset mod=NONE, 44:" " fg=Rgb(128, 138, 158) bg=Reset mod=NONE, 45:" " fg=Rgb(128, 138, 158) bg=Reset mod=NONE, 46:"q" fg=Rgb(128, 138, 158) bg=Reset mod=NONE, 47:" " fg=Rgb(128, 138, 158) bg=Reset mod=NONE, 48:"閉" fg=Rgb(128, 138, 158) bg=Reset mod=NONE, 50:"じ" fg=Rgb(128, 138, 158) bg=Reset mod=NONE, 52:"る" fg=Rgb(128, 138, 158) bg=Reset mod=NONE, 54:" " fg=Rgb(128, 138, 158) bg=Reset mod=NONE, 55:" " fg=Rgb(128, 138, 158) bg=Reset mod=NONE, 56:" " fg=Rgb(128, 138, 158) bg=Reset mod=NONE, 57:" " fg=Rgb(128, 138, 158) bg=Reset mod=NONE, 58:" " fg=Rgb(128, 138, 158) bg=Reset mod=NONE, 59:" " fg=Rgb(128, 138, 158) bg=Reset mod=NONE, 60:" " fg=Rgb(128, 138, 158) bg=Reset mod=NONE, 61:" " fg=Rgb(128, 138, 158) bg=Reset mod=NONE, 62:" " fg=Rgb(128, 138, 158) bg=Reset mod=NONE, 63:" " fg=Rgb(128, 138, 158) bg=Reset mod=NONE, 64:" " fg=Rgb(128, 138, 158) bg=Reset mod=NONE, 65:" " fg=Rgb(128, 138, 158) bg=Reset mod=NONE, 66:" " fg=Rgb(128, 138, 158) bg=Reset mod=NONE, 67:" " fg=Rgb(128, 138, 158) bg=Reset mod=NONE, 68:" " fg=Rgb(128, 138, 158) bg=Reset mod=NONE, 69:" " fg=Rgb(128, 138, 158) bg=Reset mod=NONE, 70:" " fg=Rgb(128, 138, 158) bg=Reset mod=NONE, 71:"│" fg=Rgb(74, 83, 102) bg=Reset mod=NONE
20: "        └──────────────────────────────────────────────────────────────┘        " | 8:"└" fg=Rgb(74, 83, 102) bg=Reset mod=NONE, 9:"─" fg=Rgb(74, 83, 102) bg=Reset mod=NONE, 10:"─" fg=Rgb(74, 83, 102) bg=Reset mod=NONE, 11:"─" fg=Rgb(74, 83, 102) bg=Reset mod=NONE, 12:"─" fg=Rgb(74, 83, 102) bg=Reset mod=NONE, 13:"─" fg=Rgb(74, 83, 102) bg=Reset mod=NONE, 14:"─" fg=Rgb(74, 83, 102) bg=Reset mod=NONE, 15:"─" fg=Rgb(74, 83, 102) bg=Reset mod=NONE, 16:"─" fg=Rgb(74, 83, 102) bg=Reset mod=NONE, 17:"─" fg=Rgb(74, 83, 102) bg=Reset mod=NONE, 18:"─" fg=Rgb(74, 83, 102) bg=Reset mod=NONE, 19:"─" fg=Rgb(74, 83, 102) bg=Reset mod=NONE, 20:"─" fg=Rgb(74, 83, 102) bg=Reset mod=NONE, 21:"─" fg=Rgb(74, 83, 102) bg=Reset mod=NONE, 22:"─" fg=Rgb(74, 83, 102) bg=Reset mod=NONE, 23:"─" fg=Rgb(74, 83, 102) bg=Reset mod=NONE, 24:"─" fg=Rgb(74, 83, 102) bg=Reset mod=NONE, 25:"─" fg=Rgb(74, 83, 102) bg=Reset mod=NONE, 26:"─" fg=Rgb(74, 83, 102) bg=Reset mod=NONE, 27:"─" fg=Rgb(74, 83, 102) bg=Reset mod=NONE, 28:"─" fg=Rgb(74, 83, 102) bg=Reset mod=NONE, 29:"─" fg=Rgb(74, 83, 102) bg=Reset mod=NONE, 30:"─" fg=Rgb(74, 83, 102) bg=Reset mod=NONE, 31:"─" fg=Rgb(74, 83, 102) bg=Reset mod=NONE, 32:"─" fg=Rgb(74, 83, 102) bg=Reset mod=NONE, 33:"─" fg=Rgb(74, 83, 102) bg=Reset mod=NONE, 34:"─" fg=Rgb(74, 83, 102) bg=Reset mod=NONE, 35:"─" fg=Rgb(74, 83, 102) bg=Reset mod=NONE, 36:"─" fg=Rgb(74, 83, 102) bg=Reset mod=NONE, 37:"─" fg=Rgb(74, 83, 102) bg=Reset mod=NONE, 38:"─" fg=Rgb(74, 83, 102) bg=Reset mod=NONE, 39:"─" fg=Rgb(74, 83, 102) bg=Reset mod=NONE, 40:"─" fg=Rgb(74, 83, 102) bg=Reset mod=NONE, 41:"─" fg=Rgb(74, 83, 102) bg=Reset mod=NONE, 42:"─" fg=Rgb(74, 83, 102) bg=Reset mod=NONE, 43:"─" fg=Rgb(74, 83, 102) bg=Reset mod=NONE, 44:"─" fg=Rgb(74, 83, 102) bg=Reset mod=NONE, 45:"─" fg=Rgb(74, 83, 102) bg=Reset mod=NONE, 46:"─" fg=Rgb(74, 83, 102) bg=Reset mod=NONE, 47:"─" fg=Rgb(74, 83, 102) bg=Reset mod=NONE, 48:"─" fg=Rgb(74, 83, 102) bg=Reset mod=NONE, 49:"─" fg=Rgb(74, 83, 102) bg=Reset mod=NONE, 50:"─" fg=Rgb(74, 83, 102) bg=Reset mod=NONE, 51:"─" fg=Rgb(74, 83, 102) bg=Reset mod=NONE, 52:"─" fg=Rgb(74, 83, 102) bg=Reset mod=NONE, 53:"─" fg=Rgb(74, 83, 102) bg=Reset mod=NONE, 54:"─" fg=Rgb(74, 83, 102) bg=Reset mod=NONE, 55:"─" fg=Rgb(74, 83, 102) bg=Reset mod=NONE, 56:"─" fg=Rgb(74, 83, 102) bg=Reset mod=NONE, 57:"─" fg=Rgb(74, 83, 102) bg=Reset mod=NONE, 58:"─" fg=Rgb(74, 83, 102) bg=Reset mod=NONE, 59:"─" fg=Rgb(74, 83, 102) bg=Reset mod=NONE, 60:"─" fg=Rgb(74, 83, 102) bg=Reset mod=NONE, 61:"─" fg=Rgb(74, 83, 102) bg=Reset mod=NONE, 62:"─" fg=Rgb(74, 83, 102) bg=Reset mod=NONE, 63:"─" fg=Rgb(74, 83, 102) bg=Reset mod=NONE, 64:"─" fg=Rgb(74, 83, 102) bg=Reset mod=NONE, 65:"─" fg=Rgb(74, 83, 102) bg=Reset mod=NONE, 66:"─" fg=Rgb(74, 83, 102) bg=Reset mod=NONE, 67:"─" fg=Rgb(74, 83, 102) bg=Reset mod=NONE, 68:"─" fg=Rgb(74, 83, 102) bg=Reset mod=NONE, 69:"─" fg=Rgb(74, 83, 102) bg=Reset mod=NONE, 70:"─" fg=Rgb(74, 83, 102) bg=Reset mod=NONE, 71:"┘" fg=Rgb(74, 83, 102) bg=Reset mod=NONE
21: "                                                                                "
22: "                                                                                "
23: "                                                                                "
